# rsfdisk

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  LICENSE-MIT  Makefile  README.md  build.rs  crates-io.md  flake.nix  test.nix
src/: debug.rs  error.rs  ffi_utils.rs  lib.rs
src/core/: mod.rs
src/core/errors/: conversion_error_enum.rs  gen_iterator_error_enum.rs  header_entry_content_error_enum.rs  mod.rs  parser_error_enum.rs  partition_builder_error_enum.rs  partition_error_enum.rs  partition_iter_error_enum.rs  partition_kind_builder_error_enum.rs  partition_kind_error_enum.rs  partition_list_error_enum.rs  partition_table_error_enum.rs  prompt_error_enum.rs  script_error_enum.rs
src/core/iter/: direction_enum.rs  gen_iterator_struct.rs  mod.rs
src/core/macros/: mod.rs
src/core/partition/: bit_flag_enum.rs  code_enum.rs  dos_flag_enum.rs  gpt_flag_enum.rs  guid_enum.rs  (+9 more)
src/fdisk/: device_addressing_enum.rs  fdisk_bsd_ext_trait.rs  fdisk_builder_error_enum.rs  fdisk_builder_struct.rs  fdisk_dos_ext_trait.rs  fdisk_error_enum.rs  fdisk_gpt_ext_trait.rs  fdisk_sgi_ext_trait.rs  fdisk_struct.rs  fdisk_sun_ext_trait.rs  gc_item_enum.rs  lba_align_enum.rs  mod.rs  partition_table_iter_mut_struct.rs  partition_table_iter_struct.rs  size_format_enum.rs
test_harness/utils/: stop-test-vm
tests/images/: blank-10MB.img.xz
web-snapshots/: README.md
web-snapshots/alpine-linux/: automatic-login-in-alpine-linux-for-root.html  managing-repositories.html
web-snapshots/fdisk/: sfdisk-script-structure.html
web-snapshots/fs/: construct-a-new-UFS1-UFS2-file-system.html  disktab-5-OpenBSD-manual-pages.html  read-and-write-BSD-label.html
web-snapshots/linux-kernel/: kernel-modules.html
web-snapshots/misc/: guid-partition-table.html  partition-type.html
web-snapshots/nixos/: c-header-includes.html  environment-variables.html
web-snapshots/qemu/: qemu-machine-protocol.html
web-snapshots/rust/: ffi-rust-File-to-C-FILE.html  handle_libc_error_in_idiomatic_rust.html  passing-rust-closures-to-c.html
web-snapshots/standards/: GPT-MBR-partition-table-format.html
(+30 files in other folders)
