[package]
name = "rsfdisk"
description = "Safe Rust wrapper around the `util-linux/libfdisk` C library"
version = "0.1.0"
authors = ["Nick Piaddo <nick.piaddo@protonmail.com>"]
license = "Apache-2.0 OR MIT"
rust-version = "1.72"
edition = "2021"
repository = "https://github.com/nickpiaddo/rsfdisk"
homepage = "https://github.com/nickpiaddo/rsfdisk"
documentation = "https://docs.rs/rsfdisk"
readme = "crates-io.md"
keywords = ["fdisk", "libfdisk", "partition", "util-linux", "wrapper"]
categories = ["api-bindings"]
exclude = ["web-snapshots/*", "test_harness/*", "scripts/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "2.1.0"
libc = "0.2.153"
libfdisk = { package="rsfdisk-sys", version="0.2.0" }
log = "0.4.21"
num_enum = "0.7.3"
thiserror = "1.0.57"

[dev-dependencies]
pretty_assertions = "1.4.0"

[build-dependencies]
pkg-config = "0.3.30"
